# NRE-Math

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: doxy-boot.js  footer.php  header.php
docs/html/: _header_2_n_r_e___math_8hpp.html  _header_2_n_r_e___math_8hpp.php  _header_2_n_r_e___math_8hpp_source.html  _header_2_n_r_e___math_8hpp_source.php  _math_2_n_r_e___math_8hpp.html  _math_2_n_r_e___math_8hpp.php  _math_2_n_r_e___math_8hpp_source.html  _math_2_n_r_e___math_8hpp_source.php  _n_r_e___bezier_curve3_d_8hpp.html  _n_r_e___bezier_curve3_d_8hpp.php  _n_r_e___bezier_curve3_d_8hpp_source.html  _n_r_e___bezier_curve3_d_8hpp_source.php  _n_r_e___bezier_curve4_d_8hpp.html  _n_r_e___bezier_curve4_d_8hpp.php  _n_r_e___bezier_curve4_d_8hpp_source.html  _n_r_e___bezier_curve4_d_8hpp_source.php  _n_r_e___frustum_8hpp.html  _n_r_e___frustum_8hpp.php  _n_r_e___frustum_8hpp_source.html  _n_r_e___frustum_8hpp_source.php  _n_r_e___main_8cpp.html  _n_r_e___main_8cpp.php  _n_r_e___matrix3x3_8hpp.html  _n_r_e___matrix3x3_8hpp.php  _n_r_e___matrix3x3_8hpp_source.html  _n_r_e___matrix3x3_8hpp_source.php  _n_r_e___matrix4x4_8hpp_source.html  _n_r_e___matrix4x4_8hpp_source.php  _n_r_e___plane_8hpp.html  _n_r_e___plane_8hpp.php  _n_r_e___plane_8hpp_source.html  _n_r_e___plane_8hpp_source.php  _n_r_e___quaternion_8hpp.html  _n_r_e___quaternion_8hpp.php  _n_r_e___quaternion_8hpp_source.html  _n_r_e___quaternion_8hpp_source.php  _n_r_e___segment3_d_8hpp.html  _n_r_e___segment3_d_8hpp.php  _n_r_e___segment3_d_8hpp_source.html  _n_r_e___segment3_d_8hpp_source.php  (+226 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  functions_0.js  (+35 more)
src/: Makefile  NRE_Main.cpp
src/Header/: Makefile  NRE_Math.hpp
src/Math/: Makefile  NRE_Math.hpp  NRE_Unit.hpp
src/Math/Curve/: Makefile
src/Math/Curve/Bezier/: Makefile
src/Math/Frustum/: Makefile  NRE_Frustum.cpp  NRE_Frustum.hpp  NRE_Frustum.tpp
src/Math/Matrix/: Makefile
src/Math/Matrix/2D/: Makefile  NRE_Matrix2x2.hpp  NRE_Matrix2x2.tpp
src/Math/Matrix/3D/: Makefile  NRE_Matrix3x3.hpp  NRE_Matrix3x3.tpp
src/Math/Matrix/4D/: Makefile  NRE_Matrix4x4.hpp  NRE_Matrix4x4.tpp
src/Math/Plane/: Makefile  NRE_Plane.hpp  NRE_Plane.tpp
src/Math/Quaternion/: Makefile  NRE_Quaternion.hpp  NRE_Quaternion.tpp
src/Math/Segment/3D/: Makefile  NRE_Segment3D.hpp  NRE_Segment3D.tpp
test/: NRE_Main.cpp
test/Math/Plane/: NRE_Plane.cpp
test/Math/Quaternion/: NRE_Quaternion.cpp
uml/Math/: NRE_Math.puml
(+27 files in other folders)
